<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".CrearHorario">

    <Button
        android:id="@+id/btagregar"
        android:layout_width="169dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/botones_cool"
        android:fontFamily="@font/audiowide"
        android:onClick="agregar"
        android:text="@string/Agregarmateria"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnuevo" />

    <Button
        android:id="@+id/btnuevo"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/botones_cool"
        android:fontFamily="@font/audiowide"
        android:onClick="openActivity3"
        android:text="@string/crearhorario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btacursar"
        android:layout_width="158dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/botones_cool"
        android:fontFamily="@font/audiowide"
        android:onClick="cursarActivity"
        android:text="@string/Materiasincritas"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Datosmaterias"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/stroke_cool"
        android:ems="10"
        android:gravity="start|top"


        android:hint="@string/edittx"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnuevo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/botones_cool"
        android:contentDescription="@string/ei"
        android:onClick="openActivity1"
        android:scrollbarThumbHorizontal="?attr/actionModeCloseDrawable"
        android:scrollbarThumbVertical="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <WebView
        android:id="@+id/wv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/stroke_cool"
        app:layout_constraintBottom_toTopOf="@+id/Datosmaterias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btacursar"         />

</androidx.constraintlayout.widget.ConstraintLayout>