<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:scrollbarSize="5dp"
    tools:context=".Principal">

    <Button
        android:id="@+id/cargar"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@drawable/botones_cool"
        android:fontFamily="@font/audiowide"
        android:soundEffectsEnabled="true"
        android:text="@string/cargarhorario"
        android:textAllCaps="false"
        android:textColor="#202020"
        android:textColorHighlight="#DF3737"
        android:textColorHint="#CD1616"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.618" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/orbitron_medium"
        android:text="@string/ZetplUN"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <Button
        android:id="@+id/btnuevo"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:background="@drawable/botones_cool"
        android:fontFamily="@font/audiowide"
        android:soundEffectsEnabled="true"
        android:text="@string/nuevohorario"
        android:textAllCaps="false"
        android:textColor="#202020"
        android:textColorHighlight="#DF3737"
        android:textColorHint="#CD1616"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/cargar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>